--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,9 @@ services:
     image: 'redis:latest'
 
   # Server Service
-  server:
+  api:
+    depends_on:
+      - postgres
     build:
       dockerfile: Dockerfile.dev
       context: ./server
@@ -32,19 +34,34 @@ services:
 
   # Client Service
   client:
+    stdin_open: true
     build:
       dockerfile: Dockerfile.dev
       context: ./client
-      volumes:
-        - /app/node_modules
-        - ./client:/app
+    volumes:
+      - /app/node_modules
+      - ./client:/app
 
   # Worker Service
   worker:
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
     build:
       dockerfile: Dockerfile.dev
       context: ./worker
-      volumes:
-        - /app/node_modules
-        - ./worker:/app
+    volumes:
+      - /app/node_modules
+      - ./worker:/app
+
+  nginx:
+    depends_on:
+      - api
+      - client
+    restart: always
+    build:
+      dockerfile: Dockerfile.dev
+      context: ./nginx
+    ports:
+      - '3050:80'
 
