--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: required
+
 services:
   - docker
-
 
 beofre_install:
   - docker build -t gabstone/react-test -f ./client/Dockerfile.dev ./client
@@ -24,3 +24,17 @@ after_success:
   - docker push gabstone/fib-nginx
   - docker push gabstone/fib-server
   - docker push gabstone/fib-worker
+
+
+deploy:
+  edge: true
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "prod-ready-react-app"
+  env: "ProdReadyReactApp-env"
+  bubcket_name: "elasticbeanstalk-us-east-1-837062711494"
+  bucket_path: "fib-calculator"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
