--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ deploy:
   provider: elasticbeanstalk
   region: "us-east-1"
   app: "fib-calculator"
-  env: "FibCalculator-env"
+  env: "FibCalculator-env-1"
   bubcket_name: "elasticbeanstalk-us-east-1-837062711494"
   bucket_path: "fib-calculator"
   on:
